--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@material-ui/core": "^4.9.13",
@@ -15,6 +17,7 @@
     "antd": "^4.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-mail-form": "^2.1.0",
     "react-scripts": "^3.4.1",
     "react-spring": "^8.0.27",
     "react-text-loop": "^2.3.0"
