--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^4.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.1",
     "react-scripts": "^3.4.1",
     "react-spring": "^8.0.27",
     "react-text-loop": "^2.3.0"
