--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.1",
     "react-scripts": "^3.4.1",
+    "react-scrollable-anchor": "^0.6.1",
     "react-spring": "^8.0.27",
     "react-text-loop": "^2.3.0"
   },
